Bug 160833 - FILEOPEN DOCX: Mirrored positioning of circle on the margins
Summary: FILEOPEN DOCX: Mirrored positioning of circle on the margins
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:24.8.0 target:24.2.4 inRelease...
Keywords:
Depends on:
Blocks: OOXML-Shapes DOCX-RTL
  Show dependency treegraph
 
Reported: 2024-04-26 14:01 UTC by Miklos Vajna
Modified: 2025-03-27 09:32 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Reproducer document (12.56 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2024-04-26 14:01 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2024-04-26 14:01:47 UTC
Created attachment 193869 [details]
Reproducer document

Steps to reproduce:

1) Open the attached document.

2) Look at the position of the circle shape.

Expected result: it's on the right edge of the page, like in Word.

Actual result: it's on the left edge of the page.
Comment 1 Commit Notification 2024-04-29 18:31:03 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c675eaf923cf579670b8ba2f7794b47be7fad39e

tdf#160833 sw: add a DoNotMirrorRtlDrawObjs compat flag

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2024-04-30 07:45:44 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/016b2f2f9194a4a1997d0e7bb51bbd1b10bc27ec

tdf#160833 sw DoNotMirrorRtlDrawObjs: add layout

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2024-05-02 10:09:01 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/01dcc9a652ecfc65fb674b492afa6f58b0a846db

tdf#160833 DOCX import: use the DoNotMirrorRtlDrawObjs compat flag

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Miklos Vajna 2024-05-02 11:19:01 UTC
Bugdoc is rendered OK now.
Comment 5 Commit Notification 2024-05-03 09:55:21 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/799767d5670efc7f996892de5dd7d1afdb4a6cce

tdf#160833 sw: add a DoNotMirrorRtlDrawObjs compat flag

It will be available in 24.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2024-05-03 11:51:47 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0f410680461d7ba5f70dd65b2a8263dec15ac357

tdf#160833 sw DoNotMirrorRtlDrawObjs: add UI in cui/

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2024-05-03 14:28:12 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9d95eb980ef12678f6fb978badcbe1cacbe0c4dc

Related: tdf#160833 teach DOC export about DoNotMirrorRtlDrawObjs

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2024-05-06 08:24:03 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/3fd55489b73fc8fd03a5271567153c9852986e39

tdf#160833 sw DoNotMirrorRtlDrawObjs: add layout

It will be available in 24.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2024-05-06 08:25:05 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/7d75210808f8d8be7ee226031ae27b724cfcfbcc

tdf#160833 DOCX import: use the DoNotMirrorRtlDrawObjs compat flag

It will be available in 24.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2024-05-06 08:37:09 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2f79dc2bc2ddf4006646f235f228b61e3f9ffde0

Related: tdf#160833 sw DoNotMirrorRtlDrawObjs: add enable/disable option UI

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2024-05-08 07:34:09 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/e74f2f3f259125434f7fb9f8d7c338123a0137ed

tdf#160833 sw DoNotMirrorRtlDrawObjs: add UI in cui/

It will be available in 24.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2024-05-08 07:35:12 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/fe9395164bc4130c83ab75e0c471516f9da61bee

Related: tdf#160833 teach DOC export about DoNotMirrorRtlDrawObjs

It will be available in 24.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Mathew Aderson 2025-03-27 09:32:48 UTC Comment hidden (spam)